# MultiplayerMcClone

./: .gitmodules  CMakeLists.txt  README.md  package.bat
lib/: CMakeLists.txt
shader/object/: fragment.glsl
shader/player/: vertex.glsl
src/: CMakeLists.txt
src/Client/: CMakeLists.txt  Main.cpp
src/Client/Applications/MyApp/: MyAppRunGame.cpp
src/Client/BaseGameClient/: BaseGameClient.cpp  BaseGameClient.hpp
src/Client/CameraControllers/FreecamController/: FreecamController.cpp  FreecamController.hpp
src/Client/Game/: Game.cpp  Game.hpp  GameRun.cpp
src/Client/Game/Subclasses/DrawableWorld/: DrawableWorld.cpp  DrawableWorld.hpp
src/Client/Game/Subclasses/DrawableWorld/DrawableChunk/: DrawableChunk.cpp  DrawableChunk.hpp
src/Client/Game/WorldRenderInfo/: WorldRenderInfo.cpp  WorldRenderInfo.hpp
src/Client/MyUtility/ShaderLoaders/Tessellation/: Tessellation.hpp
src/Client/MyUtility/ShaderLoaders/VertexFragment/: VertexFragment.hpp
src/Client/Utility/BaseGameClient/: BaseGameClient.cpp
src/Client/Utility/GL/ElementIndexArrayBuffer/: ElementIndexArrayBuffer.hpp
src/Client/Utility/GL/ShaderProgram/: ShaderProgram.hpp
src/Client/Utility/GL/Texture/: Texture.cpp
src/Client/Utility/ShaderLoaders/Tessellation/: Tessellation.cpp
src/Common/: CMakeLists.txt  MessageTypes.hpp
src/Common/GameMessages/: GameMessageTypes.hpp
src/Common/GameMessages/Player/SCPlayerData/: SCPlayerData.cpp  (+1 more)
src/Common/GameTypes/: GameTypes.cpp  GameTypes.hpp
src/Common/MessagePreprocessor/: MessagePreprocessor.cpp  MessagePreprocessor.hpp
src/Common/World/: World.cpp  World.hpp
src/Common/World/Chunk/: Chunk.cpp  Chunk.hpp
src/Server/: CMakeLists.txt  Main.cpp
src/Server/BaseGameServer/: BaseGameServer.cpp  BaseGameServer.hpp
src/Server/BaseGameServer/Client/: Client.cpp  Client.hpp
src/Server/GameServer/: GameServer.cpp  GameServer.hpp
src/Server/GameServer/Player/: Player.cpp  Player.hpp
(+12 files in other folders)
